/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "google/protobuf/descriptor.proto";

option csharp_namespace = "Energinet.DataHub.ProcessManager.Abstractions.Contracts";

<<<<<<<< HEAD:source/ProcessManager.Abstractions/Contracts/StartOrchestration.proto
message StartOrchestration {
========
extend google.protobuf.MessageOptions {
  optional int32 minor_version = 50001;
}

message StartOrchestrationDtoV1 {
>>>>>>>> c61479e (Add major/minor versions):source/ProcessManager.Abstractions/Contracts/StartOrchestrationDtoV1.proto
  string orchestration_name = 1; // The name of the orchestration to start.
  int32 orchestration_version = 2; // The version of the orchestration to start.
  string started_by_actor_id = 4; // The actor id who wants to start the orchestration
  string json_input = 3; // The input to the orchestration serialized as a JSON

  // !!! Update the minor version below when making changes to this protobuf contract.
  // The "= 1" is a static value, not the property "position" like with the properties above.
  option (minor_version) = 1; // A minor version constant. Can be used to warn if the message doesn't match the expected minor version.
}
